[package]
name = "ifenpay-nano-toolset"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
axum = "0.8.8"
blake2 = "0.10.6"
dashmap = { version = "6.1", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = "2.0.0"
curve25519-dalek = "4.1.3"
hex = "0.4.3"
num-bigint = "0.4.6"
once_cell = "1.21.3"
rand = "0.10.0"
reqwest =  { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }

